fixed a bug preventing items to align as specified in nav

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 *{
   margin: 0;
   padding: 0;
@@ -13,29 +19,6 @@ body{
   background-color: rgba(62, 151, 108, 0.25);
    color: black;
 }
-/* .input-contaner{
-  width: 500px;
-  height: 50px;
-  background-color: #fff;
-  border-radius: 40px;
-  display: flex;
-  align-items: center;
-  padding: 10px;
-
-} */
-/* .input-contaner > i{
-   font-size: 20px;
-   color: #777;
-}
-
-.input-contaner-wrapper{
-  flex: 1;
-  height: 40px;
-  border: none;
-  outline: none;
-  font-size: 18px;
-
-} */
 
 .landing{
   background-color: rgba(62, 151, 108, 0.25);
@@ -63,58 +46,7 @@ body{
   border-radius: 120%;
 }
 
-.intro h2{
-  position: relative;
-  font-size: 3vw;
-  color: #01fe87;;
-   color:  #f3f4f7;
-  -webkit-text-stroke: 0.3vw #01fe87;
-  -webkit-text-stroke: 0.3vw #f3f4f7;
-  text-transform: uppercase;
-}
-
-.intro h2::before{
-  content: attr(data-text);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width:0;
-  height: 100%;
-  color: #01fe87;
-  color: blue;
-  -webkit-text-stroke: 0vw #01fe87;
-  border-right: 3px solid  blue;
-  overflow: hidden;
-  animation: animate 6s linear infinite;
-}
-
-
-@keyframes animate{
-0%,10%, 100%{
-   width: 0;
-}
-
-70%, 90% {
-    width:100%;
-}
-}
-
-
-/* .landing-page{
- background-image: url('/images/My project-1.png');  
-  height: 1100px;
- background-repeat: no-repeat;
- background-position: center;
- background-size: cover;
- color: white;
- 
- 
-}
-*/
 .hero-title{
-  /* display: flex;
- justify-content: center;
- align-items: center; */
  font-family: 'Tilt Warp', cursive;
 } 
 
@@ -123,16 +55,6 @@ body{
   min-height: 100%;
 }
 
-.more-items{
-  border: 1px #404040 solid;
-  padding: .4rem;
-  border-radius: 20px;
- 
-}
-
-.more-items  img{
-  max-width: 20px;
-}
 
 .cart-img{
   max-width: 30px;
